# ai-eng-challenge

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/worklets/: pcm-capture.js
frontend/src/: App.tsx  index.css
frontend/src/components/: app-header.tsx  app-layout.tsx  app-sidebar.tsx  mode-toggle.tsx  theme-provider.tsx
frontend/src/lib/: api.ts  schemas.ts
frontend/src/routes/: ConfigurePage.tsx  SummariesPage.tsx  SummaryDetailPage.tsx  TestChatPage.tsx  TestVoicePage.tsx
frontend/tests/: setup.ts  smoke.test.ts
frontend/tests/components/: app-sidebar.test.tsx  theme-provider.test.tsx
frontend/tests/lib/: api.test.ts
scripts/: draw_graph.py  simulate_call.py  simulate_call_live.py  simulate_call_ptt.py  simulate_voice.py
src/: __init__.py  config.py  data.py  logging_config.py  main.py  models.py
src/agents/: __init__.py  checkpointer.py  flags.py  graph.py  intent_cache.py  llm.py  messages.py  normalization.py  results.py  state.py
src/agents/config/: __init__.py  phrases.py  phrases.yaml  routing.py  (+2 more)
src/routers/: admin_config.py  admin_sessions.py  admin_summaries.py  chat.py  voice.py
src/schemas/: __init__.py  admin.py  api.py  llm.py
src/services/: chat.py
src/voice/: __init__.py  langgraph_bridge.py  pipeline.py
tests/: __init__.py  conftest.py  test_smoke.py
tests/unit/: __init__.py  test_main.py  test_models.py
(+104 files in other folders)
