[project]
name = "ai-eng-challenge"
version = "0.1.0"
description = "AI-powered multi-agent customer support system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langgraph>=0.4.0",
    "langchain-google-genai>=2.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "langgraph-checkpoint-mongodb>=0.1.0",
    "deepgram-sdk>=3.7.0",
    "pipecat-ai[deepgram,silero,websocket]>=0.0.71",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.12",
    "httpx>=0.28.0",
    "ruff>=0.11.0",
    "websockets>=13.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
